<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">NUMAD16S-BinodThapaChhetry</string>

    <string name="long_app_name">NUMAD16S-BinodThapaChhetry</string>

    <string name="generate_error_label">Generate Error</string>

    <string name="tictactoe_label">Tic Tac Toe</string>

    <string name="dictionary_label">Dictionary</string>
    <string name="action_settings_label">Settings</string>
    <string name="about_label">About</string>
    <string name="title_activity_about">About</string>
    <string name="ok_label">OK</string>
    <string name="quit_label">Quit</string>
    <string name="yes_label">YES</string>
    <string name="no_label">NO</string>

    <string name="about_title">Binod Thapa Chhetry</string>

    <string name="quit_text">Are you sure you want to quit the application?</string>

<string name="about_text">\

Binod Thapa Chhetry\n\
thapachhetry.b@husky.neu.edu\n\
    1st year PhD\n\
    Personal Health Informatics\n\
</string>
    <string name="tictactoe6_title_activity_about">About</string>
    <string name="tictactoe6_action_settings">Settings</string>

    <string name="tictactoe6_app_name">UT3</string>
    <string name="tictactoe6_long_app_name">Ultimate Tic Tac Toe</string>
    <string name="tictactoe6_restart_label">Restart</string>
    <string name="tictactoe6_main_menu_label">Main Menu</string>
    <string name="tictactoe6_declare_winner">%1$s is the winner</string>
    <string name="tictactoe6_continue_label">Continue</string>
    <string name="tictactoe6_new_game_label">New Game</string>
    <string name="tictactoe6_about_title">About Ultimate Tic Tac Toe</string>
    <string name="tictactoe6_about_label">About</string>
    <string name="tictactoe6_ok_label">OK</string>
    <string name="tictactoe6_about_text">\
This game is played just like
regular Tic Tac Toe with one difference: to win a tile
you have to win a smaller game of Tic Tac Toe inside that tile.\n\
\n\
A tie happens when there are no further moves.
In the case of a tie in a small board, that will count as a win for
both sides in the larger game.\n\
        \n\
        Music credit: http://www.freesound.org
</string>
    <string name="title_activity_dictionary">Test Dictionary</string>
    <string name="action_settings">Settings</string>
    <string name="dictionary_clear">Clear</string>
    <string name="dictionary_acknowledgment">Acknowledgement</string>
    <string name="dictionary_home">Return</string>
    <string name="dictionary_hint">Search Text</string>
    <string name="dictionary_acknowledgement_message">\
        Sound credit : http://www.freesound.org
    \n\
    http://developer.android.com/intl/es/sdk/index.html
        \n\
        https://www.cs.bu.edu/teaching/c/tree/trie/
    </string>

    <string name="dictionary_alphabets">abcdefghijklmnopqrstuvwxyz</string>
    <string name="title_activity_scraggle_main">ScraggleMainActivity</string>


    <string name="scraggle_label">Scraggle</string>
    <string name="scraggle_new_game_label">New Game</string>
    <string name="scraggle_acknowledgement_label">Acknowledgement</string>
    <string name="scraggle_acknowledgement_text">\

        Acknowledgement to UT3, dictionary words from class
        \n\
        Trie: https://www.cs.bu.edu/teaching/c/tree/trie/
        \n\
        Sound credit : http://www.freesound.org
        \n\
        Mute icon: https://www.iconfinder.com/
        \n\
        Populating Adjacent cells help: Stefan Olaffson
        \n\
        Finding words in tiles help: Aditya Ponnada
        \n\

    </string>
    <string name="title_activity_scraggle_game">ScraggleGameActivity</string>
    <string name="scraggle_pause">Pause</string>
    <string name="scraggle_resume">Resume Game</string>
    <string name="scraggle_restart">Restart</string>
    <string name="scraggle_quit">Quit</string>
    <string name="scraggle_phase">Phase</string>
    <string name="scraggle_score">Score</string>
    <string name="scraggle_rules">Rules</string>

    <string name="title_activity_scraggle_game_rules">Scraggle Game Rules</string>
    <string name="scraggle_game_rules">\
        1. There are two phases in the game; each lasting for 90 seconds
        \n\
        2. During Phase 1, within each small tile, you should try to select the longest words
        \n\
        3. During Phase 2, within letters remaining in larger tiles, select the longest words
        \n\
        4. Each word detected will count as 1 points
        \n\ Each word detected will count as 1 points
        5. Longer the word in Phase 1, higher possibility of words in Phase 2
        \n\


    </string>
    <string name="scraggle_game_over">Time is up! Do you want to quit or play again?</string>

    <string name="scraggle_quit_game">Quit</string>
    <string name="scraggle_game_restart">Play Again</string>
    <string name="title_activity_communication_scraggle_home">CommunicationScraggleHome</string>

    <string name="communication_scraggle_label">Communication</string>
    <string name="communication_new_user_hint">Type new username</string>
    <string name="communication_registered_user_hint">Type username</string>
    <string name="communication_first_time_user_label"> First time player?</string>
    <string name="communication_registered_user_button"> Find opponent </string>
    <string name="communication_single_player_button"> Play Single Player </string>
    <string name="communication_new_user_button"> Register </string>
    <string name="communication_enter_game"> Enter Game </string>


    <string name="register">Register</string>
    <string name="unregister">UnRegister</string>
    <string name="send_label">Send</string>
    <string name="clear_label">Clear</string>
    <string name="google_app_id">1079411293131</string>

    <string name="two_player_scraggle_label">Two Player Word Game</string>
    <string name="two_player_label">Two Player Scraggle</string>
    <string name="two_player_play_game_label">Play game</string>
    <string name="title_activity_TwoPlayerGame_scraggle_home">TwoPlayerGameScraggleHome</string>
    <string name="title_activity_two_player_game_start">TwoPlayerGameStart</string>
    <string name="twoplayergame_registered_user_label">Returning Player</string>
    <string name="twoplayergame_new_user_label">New Player</string>
    <string name="title_activity_two_player_game_register_user">TwoPlayerGameRegisterUser</string>
    <string name="twoplayergame_enter_game_button">Go Back to enter As a Registered User</string>
    <string name="title_activity_two_player_game_returning_user">TwoPlayerGameReturningUser</string>


    <string name="trickiest_part_label">Trickiest Part</string>
    <string name="title_activity_finding_astro_main">FindingAstroMain</string>
    <string name="finding_astro_label">Finding Astro</string>
    <string name="finding_astro_accel_label">Accelerometer</string>
    <string name="finding_astro_rotation_label">Rotation</string>
    <string name="finding_astro_proximity_label">Proximity</string>
    <string name="title_activity_finding_astro_skyview">FindingAstroSkyView</string>
    <string name="title_activity_finding_astro_accelerometer">FindingAstroAccelerometer</string>
    <string name="title_activity_finding_astro_rotation_vector">FindingAstroRotationVector</string>
    <string name="title_activity_proximity">Proximity</string>
    <string name="title_activity_rotation_vector">RotationVector</string>
    <string name="finding_astro_skyview_label">Ready to play game</string>
    <string name="finding_astro_rules_label">Rules</string>
    <string name="title_activity_rules">Rules</string>
    <string name="finding_astro_rules">\

        Sky view:
        \n\
        1. Hold both the circles with your thumbs to launch the astronaut
        \n\
        2. Release your thumb with either of the circles to start a new move/direction
        \n\
        \n\
        Accelerometer:
        \n\
        Displays the magnitude and direction (in angles) of the current device movement
        \n\
        \n\
        Rotation:
        \n\
        Detects the current rotation vector of the device and vibrates if device is tilted (does not fall under expected orientation)
        \n\


    \n\
    </string>

    <string name="failed_move">Need to work on your movement speed or direction! Do you want to restart the game ?</string>
    <string name="restart_game">Restart game</string>
    <string name="quit_game">Quit game</string>
    <string name="check_rules">Check rules</string>

    <string name="title_finding_astro_challenge">Challenge Page</string>
    <string name="title_activity_finding_astro_ready">FindingAstroReady</string>
    <string name="finding_astro_registered_user_label">Returning Player</string>
    <string name="finding_astro_new_user_label">New Player</string>
    <string name="title_activity_finding_astro_new_user">FindingAstroNewUser</string>
    <string name="title_activity_finding_astro_registered_user">FindingAstroRegisteredUser</string>
    <string name="rules">Astro is a NASA astronaut lost in outer space. NASA has sent you on a mission to find him wandering in outer space. Use your smartphone to track him. At each level you will have to spot astro a given number of times. Astro is erratic and can not stay at a place for long. Therefore, you have to be quick and swift</string>
    <string name="rules_two">The image above shows your game screen. Astro is right at the center. When you start, he is going to disappear in any random direction. In order to start an dplay the game, make sure you hold both the buttons at the bottom (as shown in the image below).</string>
    <string name="rules_three">Next, keep your hands stretched while holding the phone with both the hands. As soon as the astronaut moves, move your device in that direction keeping your hands stretched. An arrow on the top will tell you in which direction you have to move. The green and blue crosshairs will help you kep your phone stable (as shown in the image below)</string>
<string name="rules_four">Keep holding the buttons until you find Astro. As soon as Astro appears on your screen, release either of the held buttons to confirm that you have found one. Right after that, hold both the buttons quickly to start the second move.\n\
So get set GO!</string>
    <string name="title_activity_finding_astro_description">FindingAstro Description</string>
    <string name="finding_astro_description">Finding Astro is a smartphone-based “Exergame” (fitness exercising game) for youth and young children to engage them in short bursts of intense arm-based physical activities. Find an erratic astronaut called “Astro”, who is lost in outer space using your smartphone. Astro can be seen only on your smartphone when moved to the right spatial location. Move your phone in the direction of astronaut’s movements and capture his photograph on your smartphone screen. Capture a set of images of Astro and move to more intense levels. Challenge your friends for short bursts of exercises and see who is the leader. With Finding Astro -  Spot the astronaut, stretch your body, tone your muscles – All with a smartphone </string>
    <string name="finding_astro_get_in">Let me in</string>
    <string name="final_project_label">Final Project</string>

</resources>