<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="@dimen/tictactoe6_elevation_high"
    android:orientation="vertical"
    android:padding="@dimen/tictactoe6_menu_padding"
    tools:context="edu.neu.madcourse.binodthapachhetry.FindingAstro.FindingAstroMain">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/tictactoe6_menu_space"
        android:text="@string/finding_astro_label"
        android:layout_gravity="center"
        android:textAppearance="?android:textAppearanceLarge"
        android:textSize="@dimen/twoplayergame_menu_text_size"/>

    <Button
        android:id="@+id/finding_astro_skyview_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dictionary_button_margin"
        android:onClick="onClick"
        android:text="@string/finding_astro_skyview_label" />


    <Button
        android:id="@+id/finding_astro_accel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/tictactoe6_menu_button_margin"
        android:padding="@dimen/tictactoe6_menu_button_padding"
        android:onClick="onClick"
        android:text="@string/finding_astro_accel_label"/>

    <Button
        android:id="@+id/finding_astro_rotation_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dictionary_button_margin"
        android:onClick="onClick"
        android:text="@string/finding_astro_rotation_label" />

    <Button
        android:id="@+id/finding_astro_rules_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dictionary_button_margin"
        android:onClick="onClick"
        android:text="@string/finding_astro_rules_label" />



</LinearLayout>
