<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:elevation="@dimen/tictactoe6_elevation_high"
android:orientation="vertical"
android:padding="@dimen/tictactoe6_menu_padding"
tools:context="edu.neu.madcourse.binodthapachhetry.Scraggle.ScraggleMainActivityFragment">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/tictactoe6_menu_space"
    android:text="@string/scraggle_label"
    android:layout_gravity="center"
    android:textAppearance="?android:textAppearanceLarge"
    android:textSize="@dimen/tictactoe6_menu_text_size"/>

<Button
    android:id="@+id/scraggle_new_game_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/tictactoe6_menu_button_margin"
    android:padding="@dimen/tictactoe6_menu_button_padding"
    android:text="@string/scraggle_new_game_label"/>

    <Button
        android:id="@+id/scraggle_button_rules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dictionary_button_margin"
        android:text="@string/scraggle_rules" />

<Button
    android:id="@+id/scraggle_acknowledgement_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/tictactoe6_menu_button_margin"
    android:padding="@dimen/tictactoe6_menu_button_padding"
    android:text="@string/scraggle_acknowledgement_label"/>



</LinearLayout>

