<!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.neu.madcourse.binodthapachhetry.MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <ListView
        android:id="@+id/listview_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"    />

</FrameLayout>
-->


<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="wrap_content"

    android:layout_height="wrap_content"

    android:background="@drawable/menu_background"

    android:elevation="@dimen/elevation_high"

    android:orientation="vertical"

    android:padding="@dimen/menu_padding"

    tools:context="edu.neu.madcourse.binodthapachhetry.MainActivityFragment">


    <TextView

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_marginBottom="@dimen/menu_space"

        android:text="@string/about_title"

        android:textAppearance="?android:textAppearanceLarge"

        android:textSize="@dimen/menu_text_size"/>


    <Button

        android:id="@+id/about_button"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:layout_margin="@dimen/menu_button_margin"

        android:padding="@dimen/menu_button_padding"

        android:text="@string/about_label"/>


    <Button

        android:id="@+id/generate_error_button"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:layout_gravity="center"

        android:layout_margin="@dimen/menu_button_margin"

        android:padding="@dimen/menu_button_padding"

        android:text="@string/generate_error_label"/>


    <Button

        android:id="@+id/tictactoe_button"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:layout_gravity="center"

        android:layout_margin="@dimen/menu_button_margin"

        android:padding="@dimen/menu_button_padding"

        android:text="@string/tictactoe_label"/>

    <Button

        android:id="@+id/quit_button"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:layout_gravity="center"

        android:layout_margin="@dimen/menu_button_margin"

        android:padding="@dimen/menu_button_padding"

        android:text="@string/quit_label"/>





</LinearLayout>
