<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="edu.neu.madcourse.binodthapachhetry.Dictionary.DictionaryActivityFragment"
    tools:showIn="@layout/activity_dictionary">



    <EditText
        android:id="@+id/textBox"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/dictionary_hint"
        android:paddingBottom="5dp"
        android:inputType="text">
    </EditText>


        <TextView
            android:id="@+id/textViewBox"
            android:layout_weight="6"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars = "vertical">
        </TextView>



    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/button_clear"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_margin="@dimen/dictionary_button_margin"
            android:text="@string/dictionary_clear" />

        <Button
            android:id="@+id/button_main_menu"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_margin="@dimen/dictionary_button_margin"
            android:text="@string/dictionary_home"/>

    </LinearLayout>

    <Button
        android:id="@+id/button_acknowledgement"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dictionary_button_margin"
        android:text="@string/dictionary_acknowledgment"/>

</LinearLayout>


