<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="@dimen/tictactoe6_elevation_high"
    android:orientation="vertical"
    android:padding="@dimen/tictactoe6_menu_padding"
    tools:context="edu.neu.madcourse.binodthapachhetry.TwoPlayerGame.TwoPlayerGameStart">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/tictactoe6_menu_space"
        android:text="@string/two_player_scraggle_label"
        android:layout_gravity="center"
        android:textAppearance="?android:textAppearanceLarge"
        android:textSize="@dimen/twoplayergame_menu_text_size"/>

    <Button
        android:id="@+id/two_player_game_registered_user_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/tictactoe6_menu_button_margin"
        android:padding="@dimen/tictactoe6_menu_button_padding"
        android:onClick="onClick"
        android:text="@string/twoplayergame_registered_user_label"/>

    <Button
        android:id="@+id/two_player_game_new_user_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dictionary_button_margin"
        android:onClick="onClick"
        android:text="@string/twoplayergame_new_user_label" />

</LinearLayout>